services/apps/cloudijs-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudijs-test
  namespace: apps
  labels:
    app: cloudijs-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudijs-test
  template:
    metadata:
      labels:
        app: cloudijs-test
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
