services/apps/cloudijs-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudijs-test
  namespace: apps
spec:
  selector:
    app: cloudijs-test
  ports:
    - name: http
      port: 80
      targetPort: 80
